--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+
 }
 
 android {
     compileSdk 30
-
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
         applicationId "pro.basked.exmgetrequest"
         minSdk 21
@@ -37,7 +40,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Retriofit
